# quicd

./: .gitignore  .llm-context.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  COMPILE_TIME_SERVICES.md  CONTRIBUTING.md  CPU_ALLOCATION_ANALYSIS.md  Cargo.toml  DEPLOYMENT.md  EXPERT_ARCHITECTURE.md  FINAL_ARCHITECTURE_DECISIONS.md  IMPLEMENTATION.md  LIBRARY_RESEARCH_SUMMARY.md  PRODUCTION_NETWORK_ARCHITECTURE.md  QUIC_ENGINE_INTEGRATION.md  QUIC_MULTIPLEXING.md  README.md  README_V2.md  REFACTORING_SUMMARY.md  SERVICES.md  SERVICE_IMPROVEMENTS.md  cert.pem  config.toml  key.pem  quicd.toml  rust-toolchain.toml  superd.toml.example
benches/: network_benchmarks.rs
cdn/: Cargo.toml
certs/: server.crt  server.key
core/: Cargo.toml
daemon/: Cargo.toml
daemon/src/: main.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  architecture.md  architecture.mdx
ebpf/: Cargo.toml
ebpf/src/: main.rs
echo/: Cargo.toml
echo/src/: lib.rs
examples/: cdn.toml  high-performance.toml  minimal.toml  simple_client.rs
http3/: Cargo.toml
http3/src/: lib.rs  parser.rs  response.rs
interop/: Dockerfile  quicd.toml  run_endpoint.sh
io/: Cargo.toml
message-relay/: Cargo.toml
network/: Cargo.toml
network/src/: config.rs  io_thread.rs  lib.rs  thread_mgmt.rs
quic/: Cargo.toml
quic/src/: integration.rs  io.rs  lib.rs  protocol_handler.rs  stream_mux.rs
quicd/: Cargo.toml  build.rs
quicd-h3/: Cargo.toml  README.md
quicd-h3/benches/: h3_benchmarks.rs  huffman_benchmark.rs
quicd-h3/examples/: file_server.rs
quicd-h3/src/: config.rs  connect.rs  connection.rs  error.rs  frame.rs  frames.rs  h3_session.rs  handler.rs  lib.rs  message.rs  metrics.rs  priority.rs  push.rs  qpack.rs  qpack_mgr.rs  qpack_streams.rs  qpack_streams_old.rs  quic_impl.rs  session.rs  settings.rs  settings_storage.rs  stream_state.rs  stream_type.rs  stream_validation.rs  validation.rs  varint.rs
quicd-h3/tests/: blocked_stream_timeout_tests.rs  connect_method_tests.rs  content_length_validation_tests.rs  frame_tests.rs  frame_varint_tests.rs  goaway_validation_tests.rs  h3_session_integration_tests.rs  huffman_encoding_tests.rs  huffman_tests.rs  integration_tests.rs  message_tests.rs  performance_tests.rs  qpack_blocked_stream_integration_tests.rs  qpack_blocked_stream_tests.rs  qpack_dynamic_table_tests.rs  qpack_instruction_tests.rs  qpack_integration_tests.rs  qpack_prefix_tests.rs  reference_tracking_tests.rs  rfc9218_priority_tests.rs  rfc_compliance_tests.rs  rfc_critical_gaps_tests.rs  server_push_lifecycle_tests.rs  settings_storage_tests.rs  settings_validation_tests.rs  stream_id_monotonicity_integration_tests.rs  stream_id_validation_tests.rs  stream_phase_tracking_tests.rs  stream_type_tests.rs  trailer_validation_tests.rs  zero_copy_optimization_tests.rs
quicd-h3/tests/common/: mock_quic.rs  mod.rs
quicd-hq-interop/: Cargo.toml
quicd-hq-interop/src/: config.rs  connection.rs  error.rs  handler.rs  lib.rs
quicd-moq/: Cargo.toml
quicd-qpack/: Cargo.toml  README.md
quicd-qpack/benches/: huffman_zero_alloc.rs  qpack_bench.rs  qpack_optimized.rs
quicd-qpack/examples/: basic.rs  complete_workflow.rs  production.rs
quicd-qpack/proptest-regressions/: integer.txt
quicd-qpack/src/: async_io.rs  config.rs  decoder.rs  dynamic_table.rs  encoder.rs  error.rs  field_line.rs  header_block.rs  huffman.rs  huffman_table.inc  instructions.rs  integer.rs  lib.rs  prefix_int.rs  static_table.rs  table.rs
quicd-qpack/src/tables/: dynamic.rs  mod.rs  static.rs
quicd-qpack/src/wire/: header_block.rs  huffman.rs  instructions.rs  mod.rs  prefix_int.rs
quicd-qpack/tests/: integration.rs  integration_tests.rs  proptest.rs  rfc9204.rs  rfc9204_compliance.rs  rfc_compliance_tests.rs
quicd-qpack/tests/rfc9204/: appendix_b.rs  capacity.rs  critical.rs  general.rs  regressions.rs
quicd-quic/: Cargo.toml
quicd-quic/src/: architecture.rs  error.rs  lib.rs  types.rs  version.rs
quicd-quic/src/connection/: cid_manager.rs  facade.rs  mod.rs  state.rs  tests.rs
quicd-quic/src/crypto/: backend.rs  boring.rs  mod.rs
quicd-quic/src/flow_control/: controller.rs  mod.rs
quicd-quic/src/frames/: mod.rs  parse.rs  types.rs
quicd-quic/src/packet/: api.rs  header.rs  mod.rs  number.rs  parser.rs  protection.rs  space.rs  types.rs
quicd-quic/src/recovery/: congestion.rs  loss.rs  mod.rs  rtt.rs  traits.rs
quicd-quic/src/server/: amplification.rs  mod.rs
quicd-quic/src/stream/: buffer.rs  controller.rs  manager.rs  mod.rs
quicd-quic/src/tls/: boringssl.rs  mod.rs
quicd-quic/src/transport/: mod.rs  parameters.rs
quicd-x/: Cargo.toml
quicd-x/src/: config.rs  error.rs  events.rs  factory.rs  handle.rs  lib.rs  server.rs  system_resources.rs
quicd/benches/: netio_buffer.rs  routing_benchmark.rs
quicd/examples/: h3_client.rs  simple_client.rs
quicd/src/: apps.rs  channel_config.rs  config.rs  lib.rs  main.rs  runtime.rs
quicd/src/config/: application.rs  global.rs  loader.rs  mod.rs  tests.rs  validation.rs
quicd/src/netio/: buffer.rs  config.rs  mod.rs  numa.rs  socket.rs  tests.rs  worker.rs
quicd/src/quic/: config.rs  connection.rs  crypto.rs  ebpf_routing.rs  manager.rs  mod.rs  prefetch.rs
quicd/src/routing/: cid_generator.rs  mod.rs  router.rs  routing.rs  tests.rs
quicd/src/telemetry/: config.rs  metrics.rs  mod.rs
quicd/src/worker/: connection_manager.rs  context.rs  io_state.rs  mod.rs  streams.rs  tests.rs
service/: Cargo.toml
service/src/: lib.rs
services/: Cargo.toml
sfu/: Cargo.toml
superd/: Cargo.toml
superd/src/: buffer_pool.rs  config.rs  config_v2.rs  error.rs  lib.rs  lib.rs.backup  lib_new.rs  lib_old.rs  lib_old2.rs  lib_v2.rs  main.rs  main_v2.rs  metrics.rs  network_io_thread.rs  network_thread.rs  quic_protocol_thread.rs  thread_mgmt.rs
superd/src/services/: echo.rs  http3.rs  mod.rs
superd/src/services/echo/: mod.rs
superd/src/services/http3/: mod.rs  parser.rs  response.rs
superd/src/tasks/: mod.rs  monitoring.rs  network_io.rs  request_processing.rs  request_processing_new.rs  service_handling.rs
(+61 files in other folders)
