[workspace]
members = ["quicd", "ebpf", "quicd-quic", "quicd-x"]
default-members = ["quicd", "quicd-quic", "quicd-x"]
resolver = "2"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "7a3c03e1"}
aya-build = { git = "https://github.com/aya-rs/aya", rev = "7a3c03e1"}
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "7a3c03e1"}
aya-log = { git = "https://github.com/aya-rs/aya", rev = "7a3c03e1"}
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "7a3c03e1"}
ahash = "0.8.12"
anyhow = "1.0.100"
async-trait = "0.1"
bytes = "1.11.0"
clap = "4.5.53"
config = "0.15.19"
core_affinity = "0.8.3"
crossbeam-channel = "0.5.15"
datagram-socket = "0.5.0"
futures = "0.3.31"
futures-core = "0.3.31"
hashbrown = "0.14"
humantime-serde = "1.1.1"
http = "0.2"
io-uring = "0.7.11"
libc = "0.2.178"
libloading = "0.9.0"
mio = "0.8"
nix = "0.30.1"
num_cpus = "1.17.0"
once_cell = "1.21.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
rustls = "0.23"
rustls-pemfile = "2.2"
rcgen = "0.14.5"
ring = "0.17.14"
serde = "1.0.228"
serde_json = "1.0.145"
slab = "0.4"
smallvec = "1.15.1"
socket2 = "0.6.1"
spin = "0.9"
sys-info = "0.9.1"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
toml = "0.9.8"
tracing = "0.1.43"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"
criterion = "0.5"
proptest = "1.4"
which = "6.0.0"
cargo_metadata = "0.23.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
