[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "superd"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
transport = { path = "../transport" }
signaling = { path = "../signaling" }
message-relay = { path = "../message-relay" }
sfu = { path = "../sfu" }
cdn = { path = "../cdn" }
tokio.workspace = true