[package]
name = "echo"
version = "0.1.0"
edition = "2021"
authors = ["Superd Contributors"]
description = "Echo service for Superd - zero-copy echo functionality"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klaalabs/superd"

[dependencies]
# Core service traits
superd-service = { path = "../superd-service" }

# Logging
tracing = "0.1"

[dev-dependencies]
# For tests
bytes = "1.8"