[package]
name = "http3"
version = "0.1.0"
edition = "2021"
authors = ["Superd Contributors"]
description = "HTTP/3 service for Superd"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klaalabs/superd"

[dependencies]
# Core service traits
service = { path = "../service" }

# Data structures
bytes = "1.8"

# Logging
tracing = "0.1"