[package]
name = "network"
version = "0.1.0"
edition = "2021"
authors = ["Superd Contributors"]
description = "High-performance network I/O layer for Superd QUIC server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klaalabs/superd"

[dependencies]
tokio = { version = "1.42", features = ["net", "rt", "time", "macros"] }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
socket2 = "0.5"
core_affinity = "0.8"
num_cpus = "1.16"
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
env_logger = "0.11"
