[package]
name = "quic"
version = "0.1.0"
edition = "2021"
authors = ["Superd Contributors"]
description = "QUIC protocol implementation for Superd"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klaalabs/superd"

[dependencies]
quiche = "0.22"
bytes = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.42", features = ["sync", "time", "rt", "macros"] }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
serde = { version = "1.0", features = ["derive"] }
network = { path = "../network" }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }