[package]
name = "quicd-h3"
version = "0.1.0"
edition = "2021"

[dependencies]
quicd-x = { path = "../quicd-x" }
quicd-qpack = { path = "../quicd-qpack" }
bytes = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync", "macros"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
anyhow = { workspace = true }
