[package]
name = "quicd-qpack"
version = "0.1.0"
edition = "2021"
authors = ["QUICD Team"]
license = "MIT OR Apache-2.0"
description = "Production-grade, safe, zero-copy QPACK (RFC 9204) implementation for HTTP/3"
repository = "https://github.com/gh-abhay/quicd"
keywords = ["http3", "qpack", "compression", "quic", "rfc9204"]
categories = ["network-programming", "encoding", "compression"]
readme = "README.md"

[dependencies]
bytes = { workspace = true }
hashbrown = { workspace = true, features = ["ahash", "inline-more"] }
serde = { workspace = true, features = ["derive", "alloc"] }
smallvec = { workspace = true }
spin = { workspace = true, features = ["once"] }
tokio = { workspace = true, features = ["io-util", "sync"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "rt-multi-thread", "macros"] }
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = ["std"]
std = ["bytes/std", "hashbrown/default", "serde/std", "smallvec/write"]
async = ["tokio", "std"]

[[bench]]
name = "qpack_bench"
harness = false

[[bench]]
name = "qpack_optimized"
harness = false

[[bench]]
name = "huffman_zero_alloc"
harness = false
