[package]
name = "quicd-quic"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.11", default-features = false }
tinyvec = { version = "1.8", features = ["alloc"] }
boring = { workspace = true, optional = true }
boring-sys = { workspace = true, optional = true }
foreign-types = "0.5.0"

[features]
default = ["std"]
std = []
boring-crypto = ["boring", "boring-sys", "std"]
