[package]
name = "quicd-quic"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.11", default-features = false }
tinyvec = { version = "1.8", features = ["alloc"] }
boring = { workspace = true }
boring-sys = { workspace = true }
foreign-types = "0.5.0"

[features]
default = ["std", "boring-crypto"]
std = []
boring-crypto = []
