[package]
name = "quicd-x"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures-core = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
humantime-serde = "1"
sys-info = "0.9"
num_cpus = "1.0"
libc = "0.2"

[dev-dependencies]
futures = "0.3"