[package]
name = "quicd-x"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.11.0"
futures-core = "0.3.31"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.228", features = ["derive"] }
humantime-serde = "1.1.1"
sys-info = "0.9.1"
num_cpus = "1.17.0"
libc = "0.2.178"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
