[package]
name = "superd"
version = "0.1.0"
edition = "2021"

[dependencies]
quic = { path = "../quic" }
io = { path = "../io" }
services = { path = "../services" }
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
# For sharding
num_cpus = "1.0"