[package]
name = "superd"
version = "0.1.0"
edition = "2021"
authors = ["Superd Contributors"]
description = "High-performance QUIC server daemon"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klaalabs/superd"

[[bin]]
name = "superd"
path = "src/main.rs"

[dependencies]
# Local crates
network = { path = "../network" }
quic = { path = "../quic" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Async trait support
async-trait = "0.1"

# Data structures
bytes = "1.8"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and configuration
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Utilities
log = "0.4"
env_logger = "0.11"
num_cpus = "1.16"
crossbeam = "0.8"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"